After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 625034 - Fix peas-demo plugin discovery on 64 bits platforms.
Fix peas-demo plugin discovery on 64 bits platforms.
Status: RESOLVED FIXED
Product: libpeas
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: libpeas-maint
libpeas-maint
Depends on:
Blocks:
 
 
Reported: 2010-07-22 13:25 UTC by Steve Frécinaux
Modified: 2010-07-22 13:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix peas-demo plugin discovery on 64 bits platforms. (1.17 KB, patch)
2010-07-22 13:25 UTC, Steve Frécinaux
none Details | Review
Fix peas-demo plugin discovery on 64 bits platforms. (1.48 KB, patch)
2010-07-22 13:28 UTC, Steve Frécinaux
committed Details | Review

Description Steve Frécinaux 2010-07-22 13:25:54 UTC
peas-demo used PREFIX instead of LIBDIR
Comment 1 Steve Frécinaux 2010-07-22 13:25:56 UTC
Created attachment 166389 [details] [review]
Fix peas-demo plugin discovery on 64 bits platforms.
Comment 2 Steve Frécinaux 2010-07-22 13:28:15 UTC
Created attachment 166390 [details] [review]
Fix peas-demo plugin discovery on 64 bits platforms.
Comment 3 Steve Frécinaux 2010-07-22 13:38:03 UTC
Attachment 166390 [details] pushed as dbf7d53 - Fix peas-demo plugin discovery on 64 bits platforms.

Reviewed on IRC