Fix peas-demo plugin discovery on 64 bits platforms.

https://bugzilla.gnome.org/show_bug.cgi?id=625034